update my feed controller.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -796,7 +796,7 @@
 "kRankHistory" = "History";
 "kRankHot" = "Hot";
 "kRankNew" = "New";
-
+"kDrawToMe" = "@Me";
 
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
