--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -810,7 +810,7 @@
 "kRankHistory" = "总榜";
 "kRankHot" = "热榜";
 "kRankNew" = "最新";
-
+"kDrawToMe" = "画给我";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
