--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -793,7 +793,7 @@
 "kRankHistory" = "總榜";
 "kRankHot" = "熱榜";
 "kRankNew" = "最新";
-
+"kDrawToMe" = "畫給我";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
