--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -811,6 +811,16 @@
 "kRankHot" = "热榜";
 "kRankNew" = "最新";
 "kDrawToMe" = "画给我";
+
+
+"kNoMyFeed" = "你还没有动态，去画一幅画或猜一幅画？";
+"kNoMyOpus" = "你还没有作品，去画一幅画？";
+"kNoMyComment" = "还没有人评论过你的评论。";
+"kNoDrawToMe" = "还没有人画过画给你，先画一幅给别人？";
+
+"kUserNoFeed" = "%@ 还没有动态。";
+"kUserNoOpus" = "%@ 还没有作品。";
+
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
