--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -794,6 +794,14 @@
 "kRankHot" = "熱榜";
 "kRankNew" = "最新";
 "kDrawToMe" = "畫給我";
+
+"kNoMyFeed" = "你還沒有動態，去畫一幅畫或猜一幅畫？";
+"kNoMyOpus" = "你還沒有作品，去畫一幅畫？";
+"kNoMyComment" = "還沒有人評論過你的評論。";
+"kNoDrawToMe" = "還沒有人畫過畫給你，先畫一幅給別人？";
+
+"kUserNoFeed" = "%@ 還沒有動態。";
+"kUserNoOpus" = "%@ 還沒有作品。";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
