--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -582,6 +582,8 @@
 "kSending" = "發送中...";
 "kNoCommentTips" = "還沒有人評論";
 "kFeedDetail" = "猜畫詳情";
+"kOpusDetail" = "查看作品";
+
 "kCommentFail" = "評論失敗";
 
 "kBlankDrawMessage" = "不能提交空白的畫哦，至少得畫幾筆吧？";
@@ -802,6 +804,9 @@
 
 "kUserNoFeed" = "%@ 還沒有動態。";
 "kUserNoOpus" = "%@ 還沒有作品。";
+
+"kOpusOperation" = "請選擇你需要的操作";
+
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
