--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -597,7 +597,7 @@
 "kSending" = "发送中...";
 "kNoCommentTips" = "还没有人评论";
 "kFeedDetail" = "猜画详情";
-
+"kOpusDetail" = "查看作品";
 "kCommentFail" = "评论失败";
 "kBlankDrawTitle" = "空白的画";
 "kBlankDrawMessage" = "不能提交空白的画，至少得画个几笔的";
@@ -820,6 +820,8 @@
 
 "kUserNoFeed" = "%@ 还没有动态。";
 "kUserNoOpus" = "%@ 还没有作品。";
+
+"kOpusOperation" = "请选择你需要的操作";
 
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
