--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -953,19 +953,19 @@
 
 "kItemGoldenDice" = "gold dice";
 "kGoldenDice" = "gold dice";
-"kGoldenDiceDescription" = "simple and noble, elegant and generous appearance of the dice, a status symbol, high rich handsome essential.";
+"kGoldenDiceDescription" = "with appearance of elegence and dignity, it is really a symbol of status.";
 
 "kItemWoodDice" = "wooden dice";
 "kWoodDice" = "wooden dice";
-"kWoodDiceDescription" = "return to nature, as in wooden dice background, dedicated young artists.";
+"kWoodDiceDescription" = "Made of wood, back to nature and purity";
 
 "kItemCrystalDice" = "crystal dice";
 "kCrystalDice" = "crystal dice";
-"kCrystalDiceDescription" = "crystal clear sense, a favorite of the girls.";
+"kCrystalDiceDescription" = "Glittering and translucent, appealing to girls.;
 
 "kItemDiamondDice" = "gem dice";
 "kDiamondDice" = "gem dice";
-"kDiamondDiceDescription" = "and Kennedy to the United States, than precious stones, symbolizing magnificent auspicious meaningful sense, everyone worth having oh";
+"kDiamondDiceDescription" = "Upmost solid and gorgeous, the symbol of auspiciousness and meaningfulness";
 
 /*********************** 大话骰子国际化字符串结束 *************************/
 
