--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -961,7 +961,7 @@
 
 "kItemCrystalDice" = "crystal dice";
 "kCrystalDice" = "crystal dice";
-"kCrystalDiceDescription" = "Glittering and translucent, appealing to girls.;
+"kCrystalDiceDescription" = "Glittering and translucent, appealing to girls.";
 
 "kItemDiamondDice" = "gem dice";
 "kDiamondDice" = "gem dice";
