finish customdice tips

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -967,5 +967,8 @@
 "kDiamondDice" = "gem dice";
 "kDiamondDiceDescription" = "Upmost solid and gorgeous, the symbol of auspiciousness and meaningfulness";
 
+"kNoMoreShowIt" = "No Remind";
+"kItemTips" = "Item Tips";
+"kCustomDiceTips" = "You can set you custom dice in user setting";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
