--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -979,5 +979,9 @@
 "kDiamondDice" = "宝石骰";
 "kDiamondDiceDescription" = "至坚至美者，非宝石莫属，象征瑰丽祥瑞，意义隽永，人人值得拥有哦～";
 
+"kNoMoreShowIt" = "不再提醒";
+"kItemTips" = "道具提示";
+"kCustomDiceTips" = "你可以在“用户设置”那里更换你的个性化骰子";
+
 /*********************** 大话骰子国际化字符串结束 *************************/
 
