--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -822,6 +822,11 @@
 "kUserNoOpus" = "%@ 还没有作品。";
 
 "kOpusOperation" = "请选择你需要的操作";
+"kContest" = "比赛";
+
+"kStatement" = "比赛声明";
+"kDecline" = "拒绝";
+"kAccept" = "接受";
 
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
