--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -806,6 +806,11 @@
 "kUserNoOpus" = "%@ 還沒有作品。";
 
 "kOpusOperation" = "請選擇你需要的操作";
+"kContest" = "比賽";
+
+"kStatement" = "比賽聲明";
+"kDecline" = "拒絕";
+"kAccept" = "接受";
 
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
