--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -807,7 +807,11 @@
 "kUserNoOpus" = "%@ has no opus.";
 
 "kOpusOperation" = "Choose your operation";
+"kContest" = "Contest";
 
+"kStatement" = "Statement";
+"kDecline" = "Decline";
+"kAccept" = "Accept";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
