--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -983,5 +983,6 @@
 "kItemTips" = "道具提示";
 "kCustomDiceTips" = "你可以在“用户设置”那里更换你的个性化骰子";
 
+"kSearchingRoom" = "查找房间中...";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
