--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -967,6 +967,7 @@
 "kItemTips" = "道具提示";
 "kCustomDiceTips" = "你可以在”用戶設置“那裡更換你的個性化骰子";
 
+"kSearchingRoom" = "查找房間中...";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
 
