--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -943,7 +943,7 @@
 "kOdds" = "1:%.2f";
 
 "kCallTips" = "Suggestion";
-"kJustOpen" = "Just open it!";
+"kJustOpen" = "Challenge!";
 
 "kDoItLikeThis" = "Do it";
 "kThinkMyself" = "Cancel";
