update contest view and bug fix.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -812,6 +812,9 @@
 "kStatement" = "Statement";
 "kDecline" = "Decline";
 "kAccept" = "Accept";
+"kDetail" = "Detail";
+"kFailLoad" = "Fail to load data, please try it later.";
+"kContestOpus" = "Opus for contest";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
