--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -811,7 +811,9 @@
 "kStatement" = "比賽聲明";
 "kDecline" = "拒絕";
 "kAccept" = "接受";
-
+"kDetail" = "詳細";
+"kFailLoad" = "獲取數據失敗，請稍後再試。";
+"kContestOpus" = "參賽作品";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
