--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -827,7 +827,9 @@
 "kStatement" = "比赛声明";
 "kDecline" = "拒绝";
 "kAccept" = "接受";
-
+"kDetail" = "详细";
+"kFailLoad" = "获取数据失败，请稍后再试。";
+"kContestOpus" = "参赛作品";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
