--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -828,6 +828,9 @@
 "kDecline" = "拒绝";
 "kAccept" = "接受";
 
+"kCoinsForFollowUs" = "奖励%d金币";
+"kFollowUs" = "关注官方微博";
+
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
