--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -812,6 +812,9 @@
 "kDecline" = "拒絕";
 "kAccept" = "接受";
 
+"kCoinsForFollowUs" = "獎勵%d金幣";
+"kFollowUs" = "關注官方微博";
+
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
