update main panel.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -819,7 +819,7 @@
 "kDetail" = "Detail";
 "kFailLoad" = "Fail to load data, please try it later.";
 "kContestOpus" = "Opus for contest";
-
+"kTop" = "Top";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
