--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -834,7 +834,7 @@
 "kDetail" = "详细";
 "kFailLoad" = "获取数据失败，请稍后再试。";
 "kContestOpus" = "参赛作品";
-
+"kTop" = "排行榜";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
