--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -818,7 +818,7 @@
 "kDetail" = "詳細";
 "kFailLoad" = "獲取數據失敗，請稍後再試。";
 "kContestOpus" = "參賽作品";
-
+"kTop" = "排行榜";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
