--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -991,5 +991,7 @@
 "kCustomDiceTips" = "你可以在“用户设置”那里更换你的个性化骰子";
 
 "kSearchingRoom" = "查找房间中...";
+"kHasBought" = "已购买";
+"kRoomNameDuplicated" = "这个房名已经被人用了，换一个吧。";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
