--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -975,6 +975,8 @@
 "kCustomDiceTips" = "你可以在”用戶設置“那裡更換你的個性化骰子";
 
 "kSearchingRoom" = "查找房間中...";
+"kHasBought" = "已購買";
+"kRoomNameDuplicated" = "這個房名已經被人用了，換一個吧。";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
 
