--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -798,7 +798,7 @@
 "kOpusCount" = "作品(%d)";
 "kJoinCount" = "参加(%d)";
 
-"kContest" = "比赛";
+"kContest" = "画画大赛";
 "kRank" = "排行榜";
 "kNoRankPlayer" = "暂时没有达人榜数据。";
 "kNoRankHistory" = "暂时没有总榜数据。";
@@ -822,7 +822,6 @@
 "kUserNoOpus" = "%@ 还没有作品。";
 
 "kOpusOperation" = "请选择你需要的操作";
-"kContest" = "比赛";
 
 "kStatement" = "比赛声明";
 "kDecline" = "拒绝";
