update main menu.

--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -13,7 +13,7 @@
 
 "kStart" = "在线猜画";
 
-"kShop" = "商店";
+"kShop" = "道具商店";
 
 "kHomeShare" = "作品";
 
@@ -834,6 +834,7 @@
 "kFailLoad" = "获取数据失败，请稍后再试。";
 "kContestOpus" = "参赛作品";
 "kTop" = "排行榜";
+"kCanotSendToSelf" = "不能为自己的作品送鲜花或者扔番茄哦。";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
