--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -13,7 +13,7 @@
 
 "kStart" = "開始遊戲";
 
-"kShop" = "商店";
+"kShop" = "道具商店";
 
 "kHomeShare" = "作品";
 
@@ -818,6 +818,7 @@
 "kFailLoad" = "獲取數據失敗，請稍後再試。";
 "kContestOpus" = "參賽作品";
 "kTop" = "排行榜";
+"kCanotSendToSelf" = "不能為自己的作品送鮮花或者扔番茄哦。";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
