--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -819,6 +819,8 @@
 "kFailLoad" = "Fail to load data, please try it later.";
 "kContestOpus" = "Opus for contest";
 "kTop" = "Top";
+
+"kCanotSendToSelf" = "You can't send flower or tomato to your opus.";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
