--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -962,11 +962,11 @@
 "kCustomDice" = "Custom Dice";
 "kItemPatriotDice" = "dragon ball dice";
 "kPatriotDice" = "dragon ball dice";
-"kPatriotDiceDescription" = "looks like dragon balls";
+"kPatriotDiceDescription" = "Looks like dragon balls";
 
 "kItemGoldenDice" = "gold dice";
 "kGoldenDice" = "gold dice";
-"kGoldenDiceDescription" = "with appearance of elegence and dignity, it is really a symbol of status.";
+"kGoldenDiceDescription" = "With appearance of elegence and dignity, it is really a symbol of status.";
 
 "kItemWoodDice" = "wooden dice";
 "kWoodDice" = "wooden dice";
