--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -967,36 +967,36 @@
 "kWoodDice" = "木骰";
 "kWoodDiceDescription" = "回歸自然，以木質作為骰子背景，文藝青年專用。";
 
-"kBlueItemCrystalDice" = "水晶骰";
-"kBlueCrystalDice" = "水晶骰";
+"kItemBlueCrystalDice" = "藍水晶骰";
+"kBlueCrystalDice" = "藍水晶骰";
 "kBlueCrystalDiceDescription" = "晶瑩剔透的感覺，女生們的最愛。";
 
-"kPinkItemCrystalDice" = "水晶骰";
-"kPinkCrystalDice" = "水晶骰";
+"kItemPinkCrystalDice" = "粉水晶骰";
+"kPinkCrystalDice" = "粉水晶骰";
 "kPinkCrystalDiceDescription" = "晶瑩剔透的感覺，女生們的最愛。";
 
-"kGreenItemCrystalDice" = "水晶骰";
-"kGreenCrystalDice" = "水晶骰";
+"kItemGreenCrystalDice" = "綠水晶骰";
+"kGreenCrystalDice" = "綠水晶骰";
 "kGreenCrystalDiceDescription" = "晶瑩剔透的感覺，女生們的最愛。";
 
-"kPurpleItemCrystalDice" = "水晶骰";
-"kPurpleCrystalDice" = "水晶骰";
+"kItemPurpleCrystalDice" = "紫水晶骰";
+"kPurpleCrystalDice" = "紫水晶骰";
 "kPurpleCrystalDiceDescription" = "晶瑩剔透的感覺，女生們的最愛。";
 
-"kBlueItemDiamondDice" = "寶石骰";
-"kBlueDiamondDice" = "寶石骰";
+"kItemBlueDiamondDice" = "藍寶石骰";
+"kBlueDiamondDice" = "藍寶石骰";
 "kBlueDiamondDiceDescription" = "至堅至美者，非寶石莫屬，象徵瑰麗祥瑞，意義雋永，人人值得擁有哦～";
 
-"kPinkItemDiamondDice" = "寶石骰";
-"kPinkDiamondDice" = "寶石骰";
+"kItemPinkDiamondDice" = "粉寶石骰";
+"kPinkDiamondDice" = "粉寶石骰";
 "kPinkDiamondDiceDescription" = "至堅至美者，非寶石莫屬，象徵瑰麗祥瑞，意義雋永，人人值得擁有哦～";
 
-"kGreenItemDiamondDice" = "寶石骰";
-"kGreenDiamondDice" = "寶石骰";
+"kItemGreenDiamondDice" = "綠寶石骰";
+"kGreenDiamondDice" = "綠寶石骰";
 "kGreenDiamondDiceDescription" = "至堅至美者，非寶石莫屬，象徵瑰麗祥瑞，意義雋永，人人值得擁有哦～";
 
-"kPurpleItemDiamondDice" = "寶石骰";
-"kPurpleDiamondDice" = "寶石骰";
+"kItemPurpleDiamondDice" = "紫寶石骰";
+"kPurpleDiamondDice" = "紫寶石骰";
 "kPurpleDiamondDiceDescription" = "至堅至美者，非寶石莫屬，象徵瑰麗祥瑞，意義雋永，人人值得擁有哦～";
 
 "kNoMoreShowIt" = "不再提醒";
