--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -835,6 +835,7 @@
 "kContestOpus" = "参赛作品";
 "kTop" = "排行榜";
 "kCanotSendToSelf" = "不能为自己的作品送鲜花或者扔番茄哦。";
+"kAutoSave" = "自动保存";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
