--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -819,6 +819,7 @@
 "kContestOpus" = "參賽作品";
 "kTop" = "排行榜";
 "kCanotSendToSelf" = "不能為自己的作品送鮮花或者扔番茄哦。";
+"kAutoSave" = "自動保存";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
