--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -8,6 +8,28 @@
 
 /*********************** 猜猜画画国际化字符串开始 *************************/
 
+/*********************** Notification begin *************************/
+//Notification
+//before 4.5 version
+"kPushMessage" = "%@ just created a room at [Draw Lively] game, \"%@\". Come and play with your friend now!";
+"kPushTextMessage" = "%@ sent you a message\"%@\"";
+"kPushDrawMessage" = "%@ sent you a draw";
+"kFM" = "Someone has just followed you";
+"kNGRD" = "%@ Guessed your drawing: [%@].";
+"kNTGD" = "%@ Tried to guess your drawing: [%@].";
+"kPDUM" = "%@ draws a drawing to you. Hurry to guess!";
+//add after 4.5
+"kPCM" = "%@ comment your[%@]: %@";
+"kPRCM" = "%@ reply to you: %@";
+"kPSF" = "%@ send a flower to your [%@].";
+"kPTT" = "%@ throw a tomato to your [%@].";
+
+//add after 5.0
+"kNFM" = "%@ follow you.";
+"kNCN" = "[%@] starts now. Hurry to join.";
+
+/*********************** Notification end *************************/
+
 "kStart" = "Online";
 
 "kShop" = "Shop";
@@ -458,7 +480,6 @@
 "kNoRoomTips" = "No Room. Create or search room.";
 "kSearchNoResult" = "No room matched";
 
-"kPushMessage" = "%@ just created a room at [Draw Lively] game, \"%@\". Come and play with your friend now!";
 "kGuessWhatIDraw" = "Guess what's this?";
 "kGuessWhatTheyDraw" = "Guess what's this?";
 
@@ -537,10 +558,6 @@
 "kTryGuessDesc" = "Tried to guess %@'s drawing: [%@].";
 
 
-//notification guess right desc
-//notification try guess desc
-"kNGRD" = "%@ Guessed your drawing: [%@].";
-"kNTGD" = "%@ Tried to guess your drawing: [%@].";
 
 
 "kDrawDescNoWord" = "Drew a picture.";
@@ -576,8 +593,6 @@
 "kComment" = "Comment";
 
 
-"kPushTextMessage" = "%@ sent you a message\"%@\"";
-"kPushDrawMessage" = "%@ sent you a draw";
 
 "kCorrect" = "Correct!";
 "kSending" = "Sending...";
@@ -607,7 +622,7 @@
 "kPlayWithHim" = "Play with him(her)";
 "kChatToHim" = "Talk something";
 
-"kFM" = "Someone has just followed you";
+
 
 "kUserFeedTitle" = "%@'s Timeline";
 "kUserFeed" = "Timeline";
@@ -626,13 +641,7 @@
 "kWeiboExpired" = "微博授权过期";
 
 
-"kPDUM" = "%@ draws a drawing to you. Hurry to guess!";
 
-//add after 4.5
-"kPCM" = "%@ comment your[%@]: %@";
-"kPRCM" = "%@ reply to you: %@";
-"kPSF" = "%@ send a flower to your [%@].";
-"kPTT" = "%@ throw a tomato to your [%@].";
 
 
 "kDrawToUserDesc" = "Drew a picture: [%@] to %@.";
