--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -11,6 +11,30 @@
 
 /*********************** 猜猜画画国际化字符串开始 *************************/
 
+
+/*********************** Notification begin *************************/
+//before 4.5 version
+"kPushMessage" = "%@ 新建了一個好友房間——\"%@\", 邀請你加入。趕緊加入好友房間，和好友猜猜畫畫吧!";
+"kPushTextMessage" = "%@ 給您發來了消息\"%@\"";
+"kPushDrawMessage" = "%@ 邀您欣賞TA的大作";
+"kFM" = "有個神秘人剛剛關注了你，快去看看TA是誰。";
+"kNGRD" = "%@ 猜對了你畫的[%@]。你也去猜猜TA的畫？";
+"kNTGD" = "%@ 嘗試去猜了你畫的[%@]。你也去猜猜TA的畫？";
+"kPDUM" = "%@ 給你畫了一幅畫，趕緊去猜猜TA畫了些什麼。";
+
+//add after 4.5
+"kPCM" = "%@ 評論了你的[%@]: %@";
+"kPRCM" = "%@ 回复你說:%@";
+"kPSF" = "%@ 給你畫的[%@]送了一朵鮮花。";
+"kPTT" = "%@ 給你畫的[%@]扔了一個番茄。";
+
+//add after 5.0
+"kNFM" = "%@ 關注了你。";
+"kNCN" = "[%@] 開始了，趕緊參加吧！豐厚獎品等你來拿喲！";
+
+/*********************** Notification end *************************/
+
+
 "kStart" = "開始遊戲";
 
 "kShop" = "道具商店";
@@ -469,7 +493,6 @@
 "kNoRoomTips" = "暫無房間，請點擊下面的［創建房間］建立自己的房間，或者［搜索房間］加入其它好友的房間";
 "kSearchNoResult" = "未搜索到符合條件的房間";
 
-"kPushMessage" = "%@ 新建了一個好友房間——\"%@\", 邀請你加入。趕緊加入好友房間，和好友猜猜畫畫吧!";
 "kGuessWhatIDraw" = "猜猜我畫了什麼？";
 "kGuessWhatTheyDraw" = "猜猜TA畫了什麼？";
 
@@ -545,8 +568,6 @@
 "kGuessRightDesc" = "猜對了%@畫的 [%@]。";
 "kTryGuessDesc" = "嘗試去猜了%@畫的 [%@]。";
 
-"kNGRD" = "%@猜對了你畫的[%@]。你也去猜猜TA的畫？";
-"kNTGD" = "%@嘗試去猜了你畫的[%@]。你也去猜猜TA的畫？";
 
 "kNoGuess" = "猜0";
 "kGuessStat" = "猜過:%d 猜中:%d";
@@ -573,10 +594,6 @@
 "kRefreshMessageing" = "正在刷新...";
 
 "kComment" = "評論";
-
-
-"kPushTextMessage" = "%@ 給您發來了消息\"%@\"";
-"kPushDrawMessage" = "%@ 邀您欣賞TA的大作";
 
 "kCorrect" = "猜對了！";
 "kSending" = "發送中...";
@@ -605,7 +622,7 @@
 "kPlayWithHim" = "和TA一起玩猜猜畫畫";
 "kChatToHim" = "搭個訕";
 
-"kFM" = "有個神秘人剛剛關注了你，快去看看TA是誰。";
+
 
 
 "kUserFeedTitle" = "%@的動態";
@@ -631,13 +648,6 @@
 "kRebindFacebook" = "你已經綁定了Facebook了，是否要重新嘗試綁​​定？"; 
 
 
-"kPDUM" = "%@給你畫了一幅畫，趕緊去猜猜TA畫了些什麼。";
-
-//add after 4.5
-"kPCM" = "%@評論了你的[%@]: %@";
-"kPRCM" = "%@回复你說:%@";
-"kPSF" = "%@給你畫的[%@]送了一朵鮮花。";
-"kPTT" = "%@給你畫的[%@]扔了一個番茄。";
 
 
 "kDrawToUserDesc" = "畫了一幅 [%@] 給%@。";
