update for 2.0 prepration, info plist:

--- a/Draw/en.lproj/InfoPlist.strings
+++ b/Draw/en.lproj/InfoPlist.strings
@@ -1,5 +1,5 @@
 /* Localized versions of Info.plist keys */
 
-"CFBundleDisplayName" = "Draw Lively";
+//"CFBundleDisplayName" = "Draw Lively";
 
-//"CFBundleDisplayName" = "Liar Dice";
+"CFBundleDisplayName" = "Liar Dice";
