--- a/Draw/zh-Hans.lproj/InfoPlist.strings
+++ b/Draw/zh-Hans.lproj/InfoPlist.strings
@@ -1,5 +1,5 @@
 /* Localized versions of Info.plist keys */
 
-"CFBundleDisplayName" = "猜猜画画";
+//"CFBundleDisplayName" = "猜猜画画";
 
-//"CFBundleDisplayName" = "欢乐大话骰";
+"CFBundleDisplayName" = "欢乐大话骰";
