--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -208,7 +208,7 @@
 "kAbout_us" = "关于我们";
 "kMore_apps" = "更多应用";
 "kGive_a_5-star_review" = "给个好评";
-"kSure_delete" = "删除图片";
+"kSure_delete" = "删除作品";
 "kAre_you_sure" = "确定删除?";
 "kOptions" = "选项";
 "kShare" = "分享";
