--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -209,7 +209,7 @@
 "kAbout_us" = "關於我們";
 "kMore_apps" = "更多應用";
 "kGive_a_5-star_review" = "給個好評";
-"kSure_delete" = "刪除圖片";
+"kSure_delete" = "刪除作品";
 "kAre_you_sure" = "確定刪除?";
 "kOptions" = "選項";
 "kShare" = "分享";
