--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -845,6 +845,7 @@
 "kTop" = "排行榜";
 "kCanotSendToSelf" = "不能为自己的作品送鲜花或者扔番茄哦。";
 "kAutoSave" = "自动保存";
+"kReplyCommentDesc" = "回复%@: %@";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
