--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -831,6 +831,7 @@
 "kTop" = "排行榜";
 "kCanotSendToSelf" = "不能為自己的作品送鮮花或者扔番茄哦。";
 "kAutoSave" = "自動保存";
+"kReplyCommentDesc" = "回複%@: %@";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
