--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -831,7 +831,7 @@
 
 "kCanotSendToSelf" = "You can't send flower or tomato to your opus.";
 "kAutoSave" = "Auto Save";
-
+"kReplyCommentDesc" = "Re %@: %@";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
