update comment feed.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -1038,6 +1038,7 @@
 "kMe" = "Me";
 "kSendMeFlower" = "Send me a flower";
 "kThrowMeTomato" = "Throw me a Tomato";
+"kCommentMyOpus" = "Comment my opus.";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
 
