--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -856,7 +856,7 @@
 "kMe" = "我";
 "kSendMeFlower" = "给我赠送了一朵鲜花！";
 "kThrowMeTomato" = "给我丢了个番茄！";
-
+"kCommentMyOpus" = "评论我的画。";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
