--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -843,6 +843,7 @@
 "kSendMeFlower" = "给我赠送了一朵鲜花！";
 "kThrowMeTomato" = "给我丢了个番茄！";
 
+"kCommentMyOpus" = "評論我的畫。";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
