update send location

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -1047,6 +1047,15 @@
 "kOpusMy" = "Mine";
 "kOpusRank" = "Top";
 "kOpusNew" = "New";
+
+"kAskLocationMessage" = "This is my position, let me see you where?";
+"kReplyLocationMessage" = "I replied to your positioning request";
+"kRejectLocationMessage" = "Reject your positioning request";
+"kReplyLocation" = "Reply";
+"kRejectLocation" = "Reject";
+"kShowLocation" = "Display";
+"kSendLocation" = "Send my location";
+
 /*********************** 大话骰子国际化字符串结束 *************************/
 
 
