--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -866,6 +866,14 @@
 "kOpusRank" = "排行";
 "kOpusNew" = "最新";
 
+"kAskLocationMessage" = "这是我的位置，让我看看你在哪个位置？";
+"kReplyLocationMessage" = "我回复了你的定位请求";
+"kRejectLocationMessage" = "拒绝你的定位请求";
+"kReplyLocation" = "回复定位";
+"kRejectLocation" = "拒绝定位";
+"kShowLocation" = "显示位置";
+"kSendLocation" = "发送我的位置";
+
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
