--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -866,6 +866,9 @@
 "kOpusRank" = "排行";
 "kOpusNew" = "最新";
 
+"kContestPassed" = "已结束(%d)";
+"kContestPendding" = "未开始";
+
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
