update send user location

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -841,6 +841,15 @@
 "kSummaryOfSendItem" = "Reply %@'s expression.";
 "kSummaryOfComment" = "Reply %@'s comment: %@.";
 
+"kUserLocationTitle" = "Location";
+"kAskLocationMessage" = "This is my position, let me see you where?";
+"kReplyLocationMessage" = "Reply positioning request";
+"kRejectLocationMessage" = "Reject positioning request";
+"kReplyLocation" = "Reply";
+"kRejectLocation" = "Reject";
+"kShowLocation" = "Display";
+"kSendLocation" = "Send my location";
+
 "kContestPassed" = "Passed(%d)";
 "kContestPendding" = "Pendding";
 "kNoContestTips" = "No Contest Now.";
@@ -1051,14 +1060,6 @@
 "kOpusMy" = "Mine";
 "kOpusRank" = "Top";
 "kOpusNew" = "New";
-
-"kAskLocationMessage" = "This is my position, let me see you where?";
-"kReplyLocationMessage" = "I replied to your positioning request";
-"kRejectLocationMessage" = "Reject your positioning request";
-"kReplyLocation" = "Reply";
-"kRejectLocation" = "Reject";
-"kShowLocation" = "Display";
-"kSendLocation" = "Send my location";
 
 /*********************** 大话骰子国际化字符串结束 *************************/
 
