--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -868,7 +868,7 @@
 
 "kContestPassed" = "已结束(%d)";
 "kContestPendding" = "未开始";
-
+"kNoContestTips" = "不好意思，目前没有适合您的比赛。";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
