--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -855,6 +855,8 @@
 
 "kContestPassed" = "已結束(%d)";
 "kContestPendding" = "未開始";
+
+"kNoContestTips" = "不好意思，目前沒有適合您的比賽。";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
